tests/ui/from_closure_wrong_type_fail.rs
fn main() {
    dynify::from_closure(|slot| slot.write(123i32) as &mut dynify::Opaque<u32>);
}
